# PyVault

./: .replit  Dockerfile  README.md  Untitled-1.ipynb  crypt.py  docker-compose.yaml  generate_otp.py  main.py  mongo_api.py  mongodb.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  send_sms.py  tasks.txt
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
logs/: pyvault.txt
notes_ignore/: notes.txt  tasks.txt
static/: style.css  tablestyle.css
templates/: about.html  content.html  forgot_password.html  home.html  index.html  password_reset.html  reset_password.html  signup.html  test.txt  verify_otp.html
